@@ -1,5 +1,10 @@
 2004-05-16  Bruno Haible  <bruno@clisp.org>
 
+	* genclisph.d (main) [TYPECODES && HAVE_SMALL_SSTRING]: Fix the
+	definition of TheS8string, TheS16string, TheS32string.
+
+2004-05-16  Bruno Haible  <bruno@clisp.org>
+
 	* lispbibl.d (NO_ARI_ASM): Define if SAFETY==3.
 	(begin_arith_call, end_arith_call): Don't test SAFETY any more.
 	* arilev1.d (LOOP_INLINE_ASM, LOOP_EXTERN_ASM): Likewise.
